--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>ru.vsu.cs.konygina_d</groupId>
     <artifactId>Graphic_Conveyor</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.1.0</version>
     <packaging>jar</packaging>
 
     <name>Graphic_Conveyor</name>
