--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ru.vsu.cs.konygina_d</groupId>
@@ -61,6 +61,9 @@
                             <addClasspath>true</addClasspath>
                         </manifest>
                     </archive>
+                    <includes>
+                        <include>src/main/ru/vsu/cs/konygina_d/affine/*</include>
+                    </includes>
                 </configuration>
             </plugin>
         </plugins>
